--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.21
 yarn_mappings=1.21+build.9
 loader_version=0.16.14
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.0-mc1.21
 maven_group=ykkz000
 archives_base_name=cobblestone-api
 # Dependencies
